--- a/src/components/views/entry-list-pane.css
+++ b/src/components/views/entry-list-pane.css
@@ -2,3 +2,9 @@ button a {
   text-decoration: none;
   color: black;
 }
+
+@media only screen and (max-width: 800px) {
+  .entry-list-container {
+    width: 90%;
+  }
+}
